--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                     <defs>
                         <!-- Grid pattern -->
                         <pattern id="grid-pattern" width="10" height="10" patternUnits="userSpaceOnUse">
-                            <circle cx="0" cy="0" r="0.5" class="grid-dot"/>
+                            <circle cx="5" cy="5" r="2" class="grid-dot"/>
                         </pattern>
                     </defs>
 
-                    <!-- Grid background -->
-                    <rect id="grid-background" width="100%" height="100%" fill="url(#grid-pattern)" class="grid-layer"/>
-
                     <!-- Main content group with transform -->
                     <g id="canvas-content" transform="translate(0,0) scale(1)">
+                        <!-- Grid background (inside zoom transform) -->
+                        <rect id="grid-background" x="-5000" y="-5000" width="10000" height="10000" fill="url(#grid-pattern)" class="grid-layer"/>
+
                         <!-- Wires layer -->
                         <g id="wires-layer"></g>
 
